--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!doctype html>
 <html lang="en">
-  
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Maruyatv - The most powerful video embed API. Integrate seamless video playback anywhere." />
-    <meta name="keywords" content="video api, embed, streaming, player, video platform" />
-    <meta name="author" content="Maruyatv" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MARUYATV - Powerful Video Embed API</title>
 
-    
-    <link rel="manifest" href="manifest.html" />
-    <link rel="apple-touch-icon" href="logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="logo.png" />
-    <title>MARUYATV - Powerful Video Embed API</title>
+  <link rel="icon" type="image/png" href="logo.png" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Maruyatv - The most powerful video embed API. Integrate seamless video playback anywhere." />
+  <meta name="keywords" content="video api, embed, streaming, player, video platform" />
+  <meta name="author" content="Maruyatv" />
 
-    <!-- Preload critical assets -->
-    <link rel="preload" href="logo.png" as="image" />
-    <link rel="preconnect" href="https://api.videasy.net/" />
-    <link rel="preconnect" href="../player.videasy.net/index.html" />
-    
-    <!-- Preload critical fonts -->
-    <link rel="preload" href="fonts/inter-var.html" as="font" type="font/woff2" crossorigin />
-    <script type="module" crossorigin src="assets/index.js"></script>
-    <link rel="modulepreload" crossorigin href="FreeTV/channels.js">
-    <link rel="modulepreload" crossorigin href="FreeTV/st.js">
-    <link rel="stylesheet" crossorigin href="FreeTV/style.css">
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <link rel="manifest" href="manifest.html" />
+  <link rel="apple-touch-icon" href="logo.png" />
+  <link rel="icon" sizes="32x32" href="logo.png" />
+  <link rel="icon" sizes="16x16" href="logo.png" />
+
+  <!-- Preload assets -->
+  <link rel="preload" href="logo.png" as="image" />
+  <link rel="preconnect" href="https://api.videasy.net/" />
+  <link rel="preconnect" href="https://player.videasy.net/" />
+
+  <!-- Preload fonts -->
+  <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=satoshi@400&display=swap" />
+
+  <!-- Player styles and scripts -->
+  <link rel="stylesheet" href="FreeTV/style.css" />
+  <script src="https://jwplayer.salidaph.online/player/v/8.36.6/jwplayer.js"></script>
+  <script src="FreeTV/channels.js" defer></script>
+  <script src="FreeTV/st.js" defer></script>
+</head>
+
+<body>
+  <div id="root">
+    <!-- React or Vanilla JS will inject content here -->
+  </div>
+</body>
 
 </html>
