--- a/manifest.html
+++ b/manifest.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MARUYATV - Powerful Video Embed API</title>
 
-  <link rel="icon" type="image/png" href="logo.png" />
+  <link rel="icon" type="image/png" href="https://i.imgur.com/cmOdVwr.png" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Maruyatv - The most powerful video embed API. Integrate seamless video playback anywhere." />
   <meta name="keywords" content="video api, embed, streaming, player, video platform" />
   <meta name="author" content="Maruyatv" />
 
   <link rel="manifest" href="manifest.html" />
-  <link rel="apple-touch-icon" href="logo.png" />
-  <link rel="icon" sizes="32x32" href="logo.png" />
-  <link rel="icon" sizes="16x16" href="logo.png" />
+  <link rel="apple-touch-icon" href="https://i.imgur.com/cmOdVwr.png" />
+  <link rel="icon" sizes="32x32" href="https://i.imgur.com/cmOdVwr.png" />
+  <link rel="icon" sizes="16x16" href="https://i.imgur.com/cmOdVwr.png" />
 
   <!-- Preload assets -->
-  <link rel="preload" href="logo.png" as="image" />
+  <link rel="preload" href="https://i.imgur.com/cmOdVwr.png" as="image" />
   <link rel="preconnect" href="https://api.videasy.net/" />
   <link rel="preconnect" href="https://player.videasy.net/" />
 
